update language files

--- a/T3kCfg/Languages/arabic.txt
+++ b/T3kCfg/Languages/arabic.txt
@@ -290,7 +290,7 @@ BTN_CAPTION_SNAPSHOT = لقطة(Snapshot)
 
 [SOFTKEY SETTING]
 TEXT_TITLE = تحديد المفتاح الوظيفي
-TEXT_HEADER_NUMBER = رقم
+TEXT_HEADER_NUMBER = عدد
 TEXT_HEADER_TYPE = تصنيف
 TEXT_HEADER_ACTION = عمل
 TEXT_ITEM_KEY = مفتاح
