--- a/T3kCfg/Languages/chinese.txt
+++ b/T3kCfg/Languages/chinese.txt
@@ -302,8 +302,8 @@ TEXT_ITEM_TOUCH =
 [TRAYICON]
 TEXT_MENU_OPEN = 打開...
 TEXT_MENU_EXIT = 退出
-TEXT_BALLOONTIP_TITLE = T3k configuratie
-TEXT_BALLOONTIP_MSG = T3k configuratie bedrijfseditie ("T3kCfgFE.exe") in werking
+TEXT_BALLOONTIP_TITLE = 
+TEXT_BALLOONTIP_MSG = 
 
 [ASSISTANCE]
 TITLE_SENSOR_STATUS = 
