--- a/T3kCfg/Languages/czech.txt
+++ b/T3kCfg/Languages/czech.txt
@@ -290,7 +290,7 @@ BTN_CAPTION_SNAPSHOT = Uložit snímek
 
 [SOFTKEY SETTING]
 TEXT_TITLE = Nastavení SW tlačítek
-TEXT_HEADER_NUMBER = č.
+TEXT_HEADER_NUMBER = číslice
 TEXT_HEADER_TYPE = Typ
 TEXT_HEADER_ACTION = Akce
 TEXT_ITEM_KEY = Klávesa
