--- a/T3kCfg/Languages/dutch.txt
+++ b/T3kCfg/Languages/dutch.txt
@@ -290,7 +290,7 @@ BTN_CAPTION_SNAPSHOT = Snapshot
 
 [SOFTKEY SETTING]
 TEXT_TITLE = Instellingen softkey
-TEXT_HEADER_NUMBER = Nr.
+TEXT_HEADER_NUMBER = Nummer
 TEXT_HEADER_TYPE = Type
 TEXT_HEADER_ACTION = Actie
 TEXT_ITEM_KEY = Toets
