--- a/T3kCfg/Languages/german.txt
+++ b/T3kCfg/Languages/german.txt
@@ -10,23 +10,23 @@ BTN_CAPTION_REFRESH = Aktualisierung
 MENU_TOOLTIP_START_PAGE = Startseite
 MENU_TOOLTIP_MOUSE = Geste
 MENU_TOOLTIP_CALIBRATION = Kalibrierung
-MENU_TOOLTIP_SENSOR_SETTING = Sensor einstellen
-MENU_TOOLTIP_GENERAL_SETTING = Allgemeine Einstellung
-MENU_TOOLTIP_SOFTKEY_SETTING = Softkey einstellen
-MSGBOX_TITLE_DEFAULT = Wechseln zur anfänglichen Einstellungen
+MENU_TOOLTIP_SENSOR_SETTING = Sensor Einstellungen
+MENU_TOOLTIP_GENERAL_SETTING = Allgemeine Einstellungen
+MENU_TOOLTIP_SOFTKEY_SETTING = Softkey Einstellungen
+MSGBOX_TITLE_DEFAULT = zurück zu anfänglichen Einstellungen
 MSGBOX_TEXT_DEFAULT = Möchten Sie die anfängliche Einstellung wiederherstellen?
 MSGBOX_TEXT_INVALID_FIRMWARE_VERSION = Dieses Programm unterstüzt keine Firmware v%1.\nAktuelle Firmware-Version: %1,\nUnterstützende Firmware-Version: %2 ~ %3
 MSGBOX_TITLE_INVALID_FIRMWARE_VERSION = Fehler überprüfen
 TITLE_CAPTION_INFORMATION = Information zum Programm
 TITLE_CAPTION_FIRMWARE = Information zur Firmware
 TEXT_DEVICE_NOT_CONNECTED = Das Gerät ist nicht angeschlossen.
-TEXT_FIRMWARE_DOWNLOAD = Firmware wird herunterladen.
+TEXT_FIRMWARE_DOWNLOAD = Firmware wird heruntergeladen.
 
 TITLE_CAPTION_LICENSE = 
 
 [SELECT DEVICE]
 WINDOW_CAPTION = Gerät auswählen
-TITLE_CAPTION_DEVICE_LIST = Gerätlist
+TITLE_CAPTION_DEVICE_LIST = Geräteliste
 TEXT_DEV_PATH = Laufwerkspfad
 TEXT_MODEL = Modell
 TEXT_NUMBER = Nummer
@@ -46,10 +46,10 @@ BTN_CAPTION_MOUSE_SUB2 = Gestenprofile einstellen
 BTN_CAPTION_CALIBRATION = Kalibrierung
 BTN_CAPTION_CALIBRATION_SUB1 = Kalibrierungsgerät
 BTN_CAPTION_CALIBRATION_SUB2 = 
-BTN_CAPTION_SENSOR_SETTING = Sensor einstellen
-BTN_CAPTION_SENSOR_SETTING_SUB1 = Aktivierung/Deaktievirung der Berührungsfunktion
+BTN_CAPTION_SENSOR_SETTING = Sensor Einstellungen
+BTN_CAPTION_SENSOR_SETTING_SUB1 = Aktivierung/Deaktivierung der Berührungsfunktion
 BTN_CAPTION_SENSOR_SETTING_SUB2 = Einstellung des Signaltons und der Shortcut-Taste
-BTN_CAPTION_GENERAL_SETTING = Allgemeine Einstellung
+BTN_CAPTION_GENERAL_SETTING = Allgemeine Einstellungen
 BTN_CAPTION_GENERAL_SETTING_SUB1 = Sprache, Eingabemodus
 BTN_CAPTION_GENERAL_SETTING_SUB2 = Bildschirm drehen
 BTN_CAPTION_REMOTE_ASSISTANCE = Fernwartung
@@ -65,18 +65,18 @@ BTN_CAPTION_TOUCH_SETTING = Berührungsfunktion einstellen...
 
 ;TEXT_SINGLE = Ein Finger
 ;TEXT_FINGERS = Mehrere Finger
-;TEXT_PALM = Handteller
+;TEXT_PALM = Handfläche
 ;TEXT_PUTNTAP = Put & Tap
 ;TEXT_DRAG = Ziehen
 ;TEXT_TAP = Tippen
 ;TEXT_DOUBLE_TAP = Doppeltippen
 ;TEXT_LONG_TAP = Lange tippen
 ;TEXT_ROTATE = Drehen
-;TEXT_ZOOM = Vergrößern/Verkleinern
+;TEXT_ZOOM = Größer/Kleiner
 TEXT_MOVE_WITH_ZOOM = Vergrößern oder Verkleinern beim Ziehen
-TEXT_INERTIAL_WHEEL = Anwendung der Trägheit des Mausrads
+TEXT_INERTIAL_WHEEL = Trägheit des Mausrads verändern
 TEXT_INDIVIDUAL_PUTNTAP_DOUBLE_TAP = Einzelne Bewegung von Put & Tap und Put & Double Tap
-TEXT_PUTAND_ON_MULTITOUCHDEVICE = Verwendung der Geste bei dem Multitouch-Eingabe-Modus
+TEXT_PUTAND_ON_MULTITOUCHDEVICE = Verwendung der Geste im Multitouch-Eingabe-Modus
 TEXT_MAC_OS_MARGIN = Mac OS X Margen des Bildschirms
 TEXT_INVERT_WHEEL = Mausrad invertieren
 
@@ -90,12 +90,12 @@ TEXT_PROFILE_LEGEND_MODE1 = Mouse
 TEXT_PROFILE_LEGEND_MODE2 = Windows 7
 
 [EDIT PROFILE ITEM]
-TITLE_CAPTION_EDIT_PROFILE_ITEM = Artikeln bearbeiten
+TITLE_CAPTION_EDIT_PROFILE_ITEM = Aktion bearbeiten
 TEXT_PROFILE_ITEM = Artikel
 TEXT_ACTION = Bewegungen
 TEXT_USER_DEFINE_KEY = Benutzerdefinierte Taste
 TEXT_KEY = Taste
-TEXT_FUNCTION_KEY = Funktionstaste(Function Key)
+TEXT_FUNCTION_KEY = Funktionstaste
 TEXT_NONE = Keine
 TEXT_NOT_DEFINED = Nicht definiert
 BTN_CAPTION_APPLY = Anwendung
@@ -111,14 +111,14 @@ TEXT_PROFILE_ITEM_BACK = Rückwärts
 TEXT_PROFILE_ITEM_TASK_SWITCH1 = Programmumschaltung
 TEXT_PROFILE_ITEM_TASK_SWITCH2 = Programmumschaltung(Aero)
 TEXT_PROFILE_ITEM_TASK_MANAGER = Taskmanager
-TEXT_PROFILE_ITEM_EXPLORER = Explorer durchführen
+TEXT_PROFILE_ITEM_EXPLORER = Explorer ausführen
 TEXT_PROFILE_ITEM_DESKTOP = Desktop anzeigen
 TEXT_PROFILE_ITEM_VKBOARD = Virtuelle Tastatur
 TEXT_PROFILE_ITEM_T3KCFG = Konfigurationsprogramm der T3k Serie
 
-TEXT_PROFILE_ITEM_MLEFT_CLICK = Left Click
-TEXT_PROFILE_ITEM_MRIGHT_CLICK = Right Click
-TEXT_PROFILE_ITEM_MMIDDLE_CLICK = Middle Click
+TEXT_PROFILE_ITEM_MLEFT_CLICK = Linksklick
+TEXT_PROFILE_ITEM_MRIGHT_CLICK = Rechtsklick
+TEXT_PROFILE_ITEM_MMIDDLE_CLICK = Mittelklick
 TEXT_PROFILE_ITEM_MLEFT_DOWN = Linke Taste
 TEXT_PROFILE_ITEM_MRIGHT_DOWN = Rechte Taste
 TEXT_PROFILE_ITEM_MMIDDLE_DOWN = Mittlere Taste
@@ -134,14 +134,14 @@ TITLE_AREA_SETTING = Bereich einstellen(%)
 TEXT_SINGLE_CLICK = Klick
 TEXT_DOUBLE_CLICK = Doppelklick
 ;TEXT_TWO_TOUCH = Put & Tap
-TEXT_PALM = Handteller
+TEXT_PALM = Handfläche
 
-TEXT_CALIBRATION_WARNING = "Mac OS X Margen des Bildschirms" ist in der "Geste" Menü nicht eingestellt worden. Da kann es eventuell nicht richtig kalibriert werden.
+TEXT_CALIBRATION_WARNING = "Mac OS X Margen des Bildschirms" ist im "Geste" Menü nicht eingestellt worden. Es können Fehler beim Kalibrieren auftreten.
 TEXT_CALIBRATION_WARNING2 = 
 
 [SETTING]
-TITLE_CAPTION_TOUCH_ENABLE = Aktivierung/Deaktievirung der Berührungsfunktion
-TEXT_TOUCH_ENABLE = Touch verwenden
+TITLE_CAPTION_TOUCH_ENABLE = Aktivierung/Deaktivierung der Berührungsfunktion
+TEXT_TOUCH_ENABLE = Berührung verwenden
 TEXT_RADIO_TOUCH_ENABLE = Aktivierung
 TEXT_RADIO_TOUCH_DISABLE = Deaktivierung
 
@@ -151,13 +151,13 @@ TEXT_CALIBRATION = Kalibrierung
 TEXT_ERROR = Fehler
 TEXT_KEYTONE = Tastenton
 TEXT_SENSOR_ATTACH = Sensor-Anschluß anzeigen
-TEXT_PEN_PAIRING = Pen pairing
+TEXT_PEN_PAIRING = Stift anpassen
 TEXT_USB_ATTACH = USB-Anschluß anzeigen
 
 TITLE_SHORTCUT_KEY = Shortcut-Taste
 TEXT_CALIBRATION_KEY = Kalibrierungstaste
 TEXT_CALIBRATION_NUMBER_OF_PRESS = Anzahl des Tastendrückens
-TEXT_TOUCH_ENABLE_KEY = Berührentaste
+TEXT_TOUCH_ENABLE_KEY = Berührungstaste
 TEXT_TOUCH_ENABLE_NUMBER_OF_PRESS = Anzahl des Tastendrückens
 TEXT_NOT_USED = Nicht Verwenden
 TEXT_ON = Ein
@@ -172,7 +172,7 @@ TEXT_INPUT_MODE_MOUSE = Maus
 TEXT_INPUT_MODE_SINGLE_TOUCH = Eingabe durch Einzelberührung (Tablet Pen)
 TEXT_INPUT_MODE_MULTI_TOUCH = Eingabe durch Multiberührung
 TEXT_INPUT_MODE_AUTO_SELECT = Automatische Auswahl
-TEXT_INPUT_MODE_WARNING_MSG = In anderen Betriebssystemen kann die Berührungsfunktion eventuell nicht richtig durchgeführt werden. Möchten Sie den Vorgang fortsetzen lassen?
+TEXT_INPUT_MODE_WARNING_MSG = In anderen Betriebssystemen kann die Berührungsfunktion eventuell nicht richtig durchgeführt werden. Möchten Sie den Vorgang fortsetzen?
 
 TITLE_MULTI_MONITOR = Multimonitor-Anzeige einstellen
 TEXT_MULTI_MONITOR = Monitor einstellen
@@ -186,7 +186,7 @@ TEXT_NON_MULTI_MONITOR = Multimonitor wird nicht unterstüzt.
 
 BTN_TOOLTIP_PLAY = Wiedergabe
 
-BTN_CAMERA_DIAGNOSTICS = Sensor kontrollieren...
+BTN_CAMERA_DIAGNOSTICS = Sensor Diagnostik…
 
 TITLE_LANGUAGE = Sprachen einstellen(Language)
 TEXT_LANGUAGE = Sprache auswählen
@@ -202,7 +202,7 @@ TEXT_DISPLAY_ORIENTATION_4 = 270' - Hochformat (gespiegelt)
 TEXT_DISPLAY_X11_ORIENTATION_1 = 0' - Normal
 TEXT_DISPLAY_X11_ORIENTATION_2 = 90' - Links
 TEXT_DISPLAY_X11_ORIENTATION_3 = 180' - Rechts
-TEXT_DISPLAY_X11_ORIENTATION_4 = 270' - Auf den Kopf umdrehen
+TEXT_DISPLAY_X11_ORIENTATION_4 = 270' - Auf den Kopf drehen
 
 TEXT_DISPLAY_MAC_ORIENTATION_1 = 
 TEXT_DISPLAY_MAC_ORIENTATION_2 = 
@@ -210,18 +210,18 @@ TEXT_DISPLAY_MAC_ORIENTATION_3 =
 TEXT_DISPLAY_MAC_ORIENTATION_4 = 
 
 TITLE_DISPLAY_WARNING = Achtung
-TEXT_DISPLAY_WARNING = Aktuelle Monitororientierung entspricht nicht mit der kalibrierte Angabe.
+TEXT_DISPLAY_WARNING = Aktuelle Monitororientierung entspricht nicht der Kalibrierung.
 
 [TOUCH SETTING]
 WINDOW_CAPTION = Berührung einstellen
-TITLE_TIME_SETTING = Uhrzeit einstellen(ms)
+TITLE_TIME_SETTING = Zeit einstellen(ms)
 TEXT_TAP = Drücken
 TEXT_LONG_TAP = Lange drücken
 TEXT_SLOW = langsamer
 TEXT_FAST = Schneller
-TITLE_WHEEL_SENSITIVITY_SETTING = Empfindlichkeitseinstellung des Mausrads und der Vergrößerung/Verkleinerung
+TITLE_WHEEL_SENSITIVITY_SETTING = Empfindlichkeitseinstellung des Mausrads-Größer/Kleiner
 TEXT_WHEEL = Mausrad
-TEXT_ZOOM = Vergrößerung/Verkleinerung
+TEXT_ZOOM = Größer/Kleiner
 
 BTN_CAPTION_DEFAULT = Voreinstellung
 BTN_CAPTION_REFRESH = Aktualisierung
@@ -230,13 +230,13 @@ MSGBOX_TEXT_DEFAULT = Möchten Sie die anfängliche Einstellung wiederherstellen
 MSGBOX_TITLE_DEFAULT = Überprüfen der Wiederherstellung der anfänglichen Einstellung
 
 [CHECK TOUCH DISABLE]
-TITLE_CAPTION = Überprüfen der Deaktivierung mit der Berührung
-TEXT_MESSAGE = Es braucht Maus, um die Berührungsfunktion zu deaktivieren. Klicken Sie die untere Taste mit der Maus.
+TITLE_CAPTION = Überprüfen der Deaktivierung der Berührung
+TEXT_MESSAGE = Sie müssen die Deaktivierung der Berührungsfunktion mit einem Mausklick auf die Zeitanzeige bestätigen.
 BTN_TIMER_TEXT = %1 Sekunde
 
 [WARNING SENSOR DIAGNOSIS]
 TITLE_CAPTION = Achtung
-TEXT_MESSAGE = Achtung! Die folgende Seite enthält die Einstellungswerte, die für die Kontrolle des Sensorzustandes nötig ist. Wenn diese Einstellungswerte geändert wird, kann die Sensor eventuell nicht richtig funktionieren.
+TEXT_MESSAGE = Achtung! Die folgende Seite enthält die Einstellungsdaten, die die Berührungsfunktionen beeinflussen.Änderungen an diesen Einstellungen können zu Fehlfunktionen oder dem Ausfall des Berührungssystems führen!
 BTN_CAPTION_CONTINUE = Fortsetzen
 BTN_CAPTION_CLOSE = Schließen
 
@@ -254,11 +254,11 @@ BTN_CAPTION_CLOSE = Schließen
 BTN_CAPTION_SAVELOG = Sensorzustand speichern
 BTN_CAPTION_MAIN = 
 BTN_CAPTION_SUB = 
-TAB_CAPTION_SIDEVIEW = Sideview
+TAB_CAPTION_SIDEVIEW = Seitenansicht
 TAB_CAPTION_DETECTION = Diagramm der Erkennung
 
 LOG_CAPTION_ERROR = Fehler beim Speichern
-LOG_SIDEVIEW = Sideview
+LOG_SIDEVIEW = Seitenansicht
 LOG_DETECTION = Erkennung
 LOG_DATA = Einstelldaten
 LOG_SAVING = Es wird gespeichert.
@@ -276,8 +276,8 @@ TITLE_SENSOR1_1 = Sensor 1-1
 TITLE_SENSOR2_1 = Sensor 2-1
 
 [SENSOR DIAGNOSIS DETECTION]
-BTN_TOOLTIP_ZOOM_IN = Vergrößerung
-BTN_TOOLTIP_ZOOM_OUT = Verkleinerung
+BTN_TOOLTIP_ZOOM_IN = Vergrößern
+BTN_TOOLTIP_ZOOM_OUT = Verkleinern
 BTN_TOOLTIP_RESET_ZOOM = Anpassen der Bildschirmgröße
 TEXT_SENSOR1_GRAPH_LEFT = Links unten
 TEXT_SENSOR1_GRAPH_RIGHT = Rechts oben
@@ -286,7 +286,7 @@ TEXT_SENSOR2_GRAPH_RIGHT = Rechts unten
 
 [SENSOR DIAGNOSIS SIDEVIEW]
 TEXT_NO_IMAGE = kein Bild
-BTN_CAPTION_SNAPSHOT = Schnappschuss(Snapshot)
+BTN_CAPTION_SNAPSHOT = Schnappschuss
 
 [SOFTKEY SETTING]
 TEXT_TITLE = Softkey einstellen
@@ -297,11 +297,11 @@ TEXT_ITEM_KEY = Taste
 TEXT_ITEM_STATE = Zustand
 TEXT_ITEM_NOT_USED = (Nicht Verwenden)
 TEXT_ITEM_CALIBRATION = Aufrufen/Verlassen der Sensorkalibrierung
-TEXT_ITEM_TOUCH = Aktivierung/Deaktivierung mit der Berührungsfunktion
+TEXT_ITEM_TOUCH = Aktivierung/Deaktivierung der Berührungsfunktion
 
 [TRAYICON]
 TEXT_MENU_OPEN = Öffnen...
-TEXT_MENU_EXIT = Enden
+TEXT_MENU_EXIT = Beenden
 TEXT_BALLOONTIP_TITLE = T3k Configurator
 TEXT_BALLOONTIP_MSG = Das Programm T3k Configurator Factory Edition("T3kCfgFE.exe") wird noch durchgeführt.
 
