--- a/T3kCfg/Languages/japanese.txt
+++ b/T3kCfg/Languages/japanese.txt
@@ -12,7 +12,7 @@ MENU_TOOLTIP_MOUSE = ジェスチャー
 MENU_TOOLTIP_CALIBRATION = タッチ座標の補正
 MENU_TOOLTIP_SENSOR_SETTING = センサー設定
 MENU_TOOLTIP_GENERAL_SETTING = 一般設定
-MENU_TOOLTIP_SOFTKEY_SETTING = 
+MENU_TOOLTIP_SOFTKEY_SETTING = ソフトキー設定
 MSGBOX_TITLE_DEFAULT = 初期設定値変更の確認
 MSGBOX_TEXT_DEFAULT = 初期設定値に変更しますか。
 MSGBOX_TEXT_INVALID_FIRMWARE_VERSION = 支援しないファームウエアバージョンです。\n現在のファームウエアバージョン : %1、\n支援ファームウエアバージョン : %2 ~ %3
@@ -28,8 +28,8 @@ TITLE_CAPTION_LICENSE =
 WINDOW_CAPTION = 装置選択
 TITLE_CAPTION_DEVICE_LIST = 装置リスト
 TEXT_DEV_PATH = パス
-TEXT_MODEL = 
-TEXT_NUMBER = 
+TEXT_MODEL = モデル
+TEXT_NUMBER = No.
 BTN_CAPTION_PLAY_BUZZER = ブザー音再生
 BTN_CAPTION_SELECT = 装置選択
 
@@ -86,8 +86,8 @@ TEXT_MIDDLE = 中間
 TEXT_DOUBLE_CLICK = ダブルクリック
 TEXT_CLICK = クリック
 
-TEXT_PROFILE_LEGEND_MODE1 = 
-TEXT_PROFILE_LEGEND_MODE2 = 
+TEXT_PROFILE_LEGEND_MODE1 = マウス
+TEXT_PROFILE_LEGEND_MODE2 = Windows7
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = 項目編集
@@ -104,8 +104,8 @@ BTN_CAPTION_CANCEL = 取り消し
 TEXT_PROFILE_ITEM_DISABLED = (使用しない)
 TEXT_PROFILE_ITEM_USER_DEFINED = (ユーザー定義)
 TEXT_PROFILE_ITEM_FUNCTION_KEY = (ファンクションキー)
-TEXT_PROFILE_ITEM_MOUSE = 
-TEXT_PROFILE_ITEM_ESCAPE = 
+TEXT_PROFILE_ITEM_MOUSE = (マウス)
+TEXT_PROFILE_ITEM_ESCAPE = Escape (Esc)
 TEXT_PROFILE_ITEM_FORWARD = 前進
 TEXT_PROFILE_ITEM_BACK = 後進
 TEXT_PROFILE_ITEM_TASK_SWITCH1 = タスクウィンドウ転換1
@@ -113,15 +113,15 @@ TEXT_PROFILE_ITEM_TASK_SWITCH2 = タスクウィンドウ転換2
 TEXT_PROFILE_ITEM_TASK_MANAGER = タスク管理者
 TEXT_PROFILE_ITEM_EXPLORER = エクスプローラ
 TEXT_PROFILE_ITEM_DESKTOP = バックグラウンド画面表示
-TEXT_PROFILE_ITEM_VKBOARD = 
-TEXT_PROFILE_ITEM_T3KCFG = 
+TEXT_PROFILE_ITEM_VKBOARD = ヴァーチャルキーボード
+TEXT_PROFILE_ITEM_T3KCFG = T3Kシリーズ設定プログラム
 
-TEXT_PROFILE_ITEM_MLEFT_CLICK = 
-TEXT_PROFILE_ITEM_MRIGHT_CLICK = 
-TEXT_PROFILE_ITEM_MMIDDLE_CLICK = 
-TEXT_PROFILE_ITEM_MLEFT_DOWN = 
-TEXT_PROFILE_ITEM_MRIGHT_DOWN = 
-TEXT_PROFILE_ITEM_MMIDDLE_DOWN = 
+TEXT_PROFILE_ITEM_MLEFT_CLICK = 左クリック
+TEXT_PROFILE_ITEM_MRIGHT_CLICK = 右クリック
+TEXT_PROFILE_ITEM_MMIDDLE_CLICK = ミドルクリック
+TEXT_PROFILE_ITEM_MLEFT_DOWN = 左ボタン
+TEXT_PROFILE_ITEM_MRIGHT_DOWN = 右ボタン
+TEXT_PROFILE_ITEM_MMIDDLE_DOWN = ミドルボタン
 
 [CALIBRATION SETTING]
 TITLE_CAPTION_CALIBRATION = タッチ座標の補正
@@ -136,8 +136,8 @@ TEXT_DOUBLE_CLICK = ダブルクリック
 ;TEXT_TWO_TOUCH = Put & Tap
 TEXT_PALM = 手の平
 
-TEXT_CALIBRATION_WARNING = 
-TEXT_CALIBRATION_WARNING2 = 
+TEXT_CALIBRATION_WARNING = "ジェスチャー"メニューから"Mac OS X Margin"が設定されていません。キャリブレーションが正常に動作しないことがあります。
+TEXT_CALIBRATION_WARNING2 = "ジェスチャー"メニューから"Mac OS X Margin"が設定されました。キャリブレーションが正常に動作しないことがあります。
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = タッチ使用の有無
@@ -190,7 +190,7 @@ BTN_CAMERA_DIAGNOSTICS = センサー点検…
 
 TITLE_LANGUAGE = 言語設定(Language)
 TEXT_LANGUAGE = 言語選択
-TEXT_LANGUAGE_NOT_FOUND = 
+TEXT_LANGUAGE_NOT_FOUND = 言語ファイルが存在しません
 
 TITLE_DISPLAY_ORIENTATION = ディスプレイの向き
 TEXT_DISPLAY_ORIENTATION = 向き
@@ -199,10 +199,10 @@ TEXT_DISPLAY_ORIENTATION_2 = 90' - ポートレート
 TEXT_DISPLAY_ORIENTATION_3 = 180' - 風景 (反転)
 TEXT_DISPLAY_ORIENTATION_4 = 270' - ポートレート (反転)
 
-TEXT_DISPLAY_X11_ORIENTATION_1 = 
-TEXT_DISPLAY_X11_ORIENTATION_2 = 
-TEXT_DISPLAY_X11_ORIENTATION_3 = 
-TEXT_DISPLAY_X11_ORIENTATION_4 = 
+TEXT_DISPLAY_X11_ORIENTATION_1 = 0' - 普通
+TEXT_DISPLAY_X11_ORIENTATION_2 = 90' - 左
+TEXT_DISPLAY_X11_ORIENTATION_3 = 180' - 右
+TEXT_DISPLAY_X11_ORIENTATION_4 = 270' - Upside Down
 
 TEXT_DISPLAY_MAC_ORIENTATION_1 = 
 TEXT_DISPLAY_MAC_ORIENTATION_2 = 
@@ -241,34 +241,34 @@ BTN_CAPTION_CONTINUE = 引き続き
 BTN_CAPTION_CLOSE = 閉じる
 
 [INFORMATION GATHERING]
-TITLE_CAPTION = 
-TEXT_MESSAGE = 
-BTN_CAPTION_CONTINUE = 
-BTN_CAPTION_CLOSE = 
+TITLE_CAPTION = 同意
+TEXT_MESSAGE = 次の画面で、センサー情報とユーザー環境（OSのバージョン、Tablet Input Service（Windows）、解像度）を収集します。
+BTN_CAPTION_CONTINUE = 同意する
+BTN_CAPTION_CLOSE = 拒否する
 
 [SENSOR DIAGNOSIS]
 TITLE_CAPTION = センサー診断道具
 BTN_CAPTION_DEFAULT = 基本値
 BTN_CAPTION_REFRESH = リフレッシュ
 BTN_CAPTION_CLOSE = 閉じる
-BTN_CAPTION_SAVELOG = 
-BTN_CAPTION_MAIN = 
-BTN_CAPTION_SUB = 
+BTN_CAPTION_SAVELOG = センサーの状態を保存
+BTN_CAPTION_MAIN = Main
+BTN_CAPTION_SUB = Sub
 TAB_CAPTION_SIDEVIEW = サイドビュー
 TAB_CAPTION_DETECTION = 検出グラフ
 
-LOG_CAPTION_ERROR = 
-LOG_SIDEVIEW = 
-LOG_DETECTION = 
-LOG_DATA = 
-LOG_SAVING = 
-LOG_LOADING = 
-LOG_COMPLETE = 
-LOG_OK = 
-LOG_FAIL = 
-LOG_PROGRESS = 
-LOG_START = 
-LOG_CAMERA = 
+LOG_CAPTION_ERROR = エラー！保存に失敗しました
+LOG_SIDEVIEW = サイドビュー
+LOG_DETECTION = 検出
+LOG_DATA = 設定データ
+LOG_SAVING = 保存中
+LOG_LOADING = ロード中
+LOG_COMPLETE = 完了
+LOG_OK = ＯＫ
+LOG_FAIL = 失敗
+LOG_PROGRESS = 進行
+LOG_START = スタート
+LOG_CAMERA = カメラ
 
 TITLE_SENSOR1 = センサー1
 TITLE_SENSOR2 = センサー2
@@ -289,42 +289,42 @@ TEXT_NO_IMAGE = 映像なし
 BTN_CAPTION_SNAPSHOT = スナップショット
 
 [SOFTKEY SETTING]
-TEXT_TITLE = 
-TEXT_HEADER_NUMBER = 
-TEXT_HEADER_TYPE = 
-TEXT_HEADER_ACTION = 
-TEXT_ITEM_KEY = 
-TEXT_ITEM_STATE = 
-TEXT_ITEM_NOT_USED = 
-TEXT_ITEM_CALIBRATION = 
-TEXT_ITEM_TOUCH = 
+TEXT_TITLE = ソフトキー設定
+TEXT_HEADER_NUMBER = 番号
+TEXT_HEADER_TYPE = タイプ
+TEXT_HEADER_ACTION = 動作
+TEXT_ITEM_KEY = キー
+TEXT_ITEM_STATE = 状態
+TEXT_ITEM_NOT_USED = （無効）
+TEXT_ITEM_CALIBRATION = センサキャリブレーション 開始/終了
+TEXT_ITEM_TOUCH = タッチスクリーン 有効/無効
 
 [TRAYICON]
 TEXT_MENU_OPEN = 開く…
 TEXT_MENU_EXIT = 終了
 TEXT_BALLOONTIP_TITLE = 
-TEXT_BALLOONTIP_MSG = 
+TEXT_BALLOONTIP_MSG = T3k Configurator Factory Editionプログラム（"T3kCfgFE.exe"）が実行中です。
 
 [ASSISTANCE]
-TITLE_SENSOR_STATUS = 
-TITLE_REMOTE = 
-TEXT_SELECT_SERVER = 
-TEXT_PORT = 
-TEXT_USERNAME = 
-BTN_REQUEST = 
-TEXT_RECONNECTING = 
-BTN_CANCEL = 
-TEXT_CONNECTING = 
-TEXT_REMOTE_CONTROL = 
-BTN_DISCONNECT = 
-TEXT_WAIT_MSG = 
-TEXT_REPAIRCONNECTION = 
-TEXT_ID = 
-TEXT_SERV_NOT_RES = 
-TITLE_CHAT = 
-BTN_SEND = 
-MSG_CHAT_DISCONNECTED = 
-TITLE_REMOTE_MSG = 
-MSG_REMOTE_DISCONNECT = 
-TEXT_HELP_MSG = 
-TEXT_HELP_ARROW = 
+TITLE_SENSOR_STATUS = センサー状態
+TITLE_REMOTE = リモートコントロール
+TEXT_SELECT_SERVER = サーバー選択
+TEXT_PORT = ポート
+TEXT_USERNAME = ユーザーネーム
+BTN_REQUEST = リクエスト
+TEXT_RECONNECTING = 再接続… %1
+BTN_CANCEL = キャンセル
+TEXT_CONNECTING = 接続中…
+TEXT_REMOTE_CONTROL = リモートコントロール…
+BTN_DISCONNECT = 切断
+TEXT_WAIT_MSG = adminの接続待機中
+TEXT_REPAIRCONNECTION = リモートコントロールが切断されました。\n adminの接続を待っています...
+TEXT_ID = ID: %1
+TEXT_SERV_NOT_RES = サーバーが応答しません。
+TITLE_CHAT = ダイアログ
+BTN_SEND = 送信
+MSG_CHAT_DISCONNECTED = 切断されました
+TITLE_REMOTE_MSG = 切断を確認しました
+MSG_REMOTE_DISCONNECT = 切断しますか？
+TEXT_HELP_MSG = 十字マークの中心をタッチしてください
+TEXT_HELP_ARROW = 矢印の先端をタッチしてください
